# CRUD/src/main/resources/openapi.yml
@@ -93,12 +93,21 @@ paths:
               schema:
                 $ref: '#/components/schemas/MensajeDTO'
 
-  /api/auth/usuarios/password:
+  /api/auth/usuarios/password{codigo}:
     patch:
       summary: Cambiar contraseña
       description: Cambia la contraseña de un usuario existente
       tags:
         - Autenticación
+      security:
+        - bearerAuth: [ ]
+      parameters:
+        - in: path
+          name: codigo
+          required: true
+          schema:
+            type: string
+          description: Código del usuario
       requestBody:
         required: true
         content:
@@ -316,6 +325,56 @@ paths:
               schema:
                 $ref: '#/components/schemas/MensajeDTO'
 
+  /api/general/email/password/{email}:
+    get:
+      summary: Enviar un email
+      description: Envía un email al usuario que pidió recuperar la contraseña el cual devuelve un token
+      tags:
+        - General
+      parameters:
+        - in: path
+          name: email
+          schema:
+            type: string
+          description: Email del usuario
+      responses:
+        '200':
+          description: Email enviado correctamente
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/MensajeDTO'
+        '400':
+          description: Formato de correo electrónico inválido
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/MensajeDTO'
+        '404':
+          description: Correo electrónico no encontrado en la base de datos
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/MensajeDTO'
+        '429':
+          description: Límite de envío de correos alcanzado
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/MensajeDTO'
+        '500':
+          description: Error interno del servidor
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/MensajeDTO'
+        '503':
+          description: Servidor de correo no disponible
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/MensajeDTO'
+
 components:
   schemas:
 
@@ -364,12 +423,9 @@ components:
     CambioPasswordDTO:
       type: object
       properties:
-        email:
-          type: string
         nuevaPassword:
           type: string
       required:
-        - email
         - nuevaPassword
 
     ActualizarUsuarioDTO:
